--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,8 +2,9 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js",
-            "use": "@vercel/node"
+            "src": "./index.js",
+            "use": "@vercel/node",
+            "config": {}
         }
     ],
     "routes": [
